# analizbot

./: .env.example  .gitignore  KULLANIM.txt  OTONOM_ISLEM_PLANI.md  README.md  config.yaml  pyproject.toml  requirements.txt
.claude/skills/: README.md
.claude/skills/backtest-runner/: SKILL.md
.claude/skills/market-screen/: SKILL.md
deploy/: VPS_KURULUM.md  setup.sh
scripts/: horizon_backtests.py  strategy_comparison.py
src/: __init__.py  config.py  logging_setup.py
src/app/: __init__.py  cli.py  live_strategy.py  scheduler.py  telegram_bot.py
src/backtest/: __init__.py  runner.py  walkforward.py
src/core/: __init__.py  derivatives.py  engine.py  indicators.py  models.py  regime.py  simulate.py
src/data/: __init__.py  base.py  crypto_ccxt.py  market_registry.py  yfinance_data.py
src/execution/: __init__.py  base.py  binance_spot.py  factory.py  manager.py  models.py  paper.py  risk.py
src/learning/: __init__.py  calibrator.py  coach.py  evaluator.py  stats.py  thesis.py
src/ml/: __init__.py  features.py  train.py
src/notify/: __init__.py  base.py  console.py  factory.py  format.py  telegram.py
src/storage/: __init__.py  db.py
src/strategies/: __init__.py  base.py  confluence.py  ema_rsi.py  ensemble.py  levels.py  ml_strategy.py  pairs.py  regime_filtered.py  registry.py  sizing.py
tests/: conftest.py  test_backtest.py  test_binance_spot.py  test_coach.py  test_confluence.py  test_derivatives.py  test_engine.py  test_ensemble.py  test_exec_factory.py  test_exec_manager.py  test_exec_storage.py  test_execution_paper.py  test_feedback.py  test_indicators.py  test_indicators_extended.py  test_ml.py  test_pairs.py  test_regime.py  test_risk.py  test_sizing.py  test_storage.py  test_strategy.py  test_telegram_control.py  test_thesis.py  test_trade_cli.py  test_walkforward.py  test_yfinance.py
tests/fixtures/: generate_fixture.py  ohlcv_btcusdt.csv
(+7 files in other folders)
