# Proje metadata + araç ayarları (PEP 621).
# "src" layout: içe aktarımlar "from src.core... " biçiminde; CLI "python -m src.app.cli".

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "analizbot"
version = "0.1.0"
description = "Binance kripto analiz & sinyal botu (read-only, karar-destek aracı)"
requires-python = ">=3.12"
readme = "README.md"
# Çekirdek bağımlılıklar (requirements.txt ile aynı; Telegram kullanıcı isteğiyle dahil)
dependencies = [
  "ccxt>=4.4,<5",
  "pandas>=2.2,<3",
  "numpy>=2,<3",
  "pydantic>=2.9,<3",
  "pydantic-settings>=2.5,<3",
  "PyYAML>=6,<7",
  "SQLAlchemy>=2,<3",
  "rich>=13,<15",
  "typer>=0.12,<1",
  "tenacity>=9,<10",
  "python-telegram-bot[job-queue]>=22,<23",
  "scikit-learn>=1.5,<2",
  "joblib>=1.3,<2",
]

[project.optional-dependencies]
# Yedek indikatör kütüphanesi (ileride indikatör sayısı artarsa)
ta = ["pandas-ta-classic>=0.6,<1"]
# Gradient boosting modelleri (model_type: lgbm | xgb). Olmadan rf/hgb çalışır.
ml-boost = ["lightgbm>=4,<5", "xgboost>=2,<4"]
# Pair trading / cointegration (pairs komutu)
pairs = ["statsmodels>=0.14,<1"]
# ABD hisse senedi desteği (us_equity sembolleri → YFinanceData)
equities = ["yfinance>=0.2,<2"]
# Geliştirme araçları
dev = ["pytest>=8,<9", "ruff>=0.6", "mypy>=1.8"]

[project.scripts]
# "pip install -e ." sonrası "analizbot analyze BTC/USDT" çalışır
analizbot = "src.app.cli:app"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# E/F: pyflakes+pycodestyle, I: import sıralama, UP: modern syntax, B: bugbear
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]   # proje kökünü ekle ki "import src..." çalışsın
